--- a/02_css/01_css선택자1.html
+++ b/02_css/01_css선택자1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>css 선택자1</title>
     <style>
         /* css 주석 */
         /* 모든 선택자 '*' 기호를 사용한다. */
