--- a/02_css/02_css선택자2.html
+++ b/02_css/02_css선택자2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>css 선택자2</title>
     <link rel="stylesheet" href="selector2.css"><!-- 외부 스타일 시트 방식 -->
 </head>
 <body>
