--- a/02_css/03_css선택자3.html
+++ b/02_css/03_css선택자3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>css 선택자3</title>
     <style>
         /* 형제 탐색 선택자들 */
         /* 형제 관계 태그 중 첫번째 태그 선택 */
