--- a/02_css/04_선택자_우선순위.html
+++ b/02_css/04_선택자_우선순위.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>선택자 우선순위</title>
     <style>
         .test1 {
             background: yellow;
