[250418]javascript(web)-DOM and Event handler

--- a/04_javascript(web)/01_DOM/01_get_element_node/01_use_id.html
+++ b/04_javascript(web)/01_DOM/01_get_element_node/01_use_id.html
@@ -25,6 +25,12 @@
       // 해당 아이디를 가진 요소를 가져올 때도 첫번째 요소만 가져온다.
       const $element = document.getElementById("area1");
       console.log("====area1=====");
+      /* 결과 
+        <div id="area1" class="area">
+        div 영역
+          <p id="area2">p영역</p>
+        </div>
+        */
       console.log($element);
       $element.style.background = "skyblue";
 
