--- a/04_javascript(web)/01_DOM/01_get_element_node/03_use_class.html
+++ b/04_javascript(web)/01_DOM/01_get_element_node/03_use_class.html
@@ -21,6 +21,8 @@
       // Document.prototype.getElementsByClassName
       // DOM 전체에서 class 값이 drink인 요소 노드를 모두 탐색하여 반환
       const $drinks = document.getElementsByClassName("drink");
+      const drinks = document.querySelector(".drink");
+      console.log(`'쿼리' : ${drinks}`);
       console.log($drinks);
       console.log($drinks.length);
 
