--- a/04_javascript(web)/01_DOM/01_get_element_node/04_user_css.html
+++ b/04_javascript(web)/01_DOM/01_get_element_node/04_user_css.html
@@ -17,6 +17,8 @@
     <script>
       // Documents.prototype.querySelector
       // DOM 전체에서 class 어트리뷰트 값이 area인 첫번째 요소 노드를 탐색하여 반환
+      const $aa = document.getElementsByClassName("area");
+      console.log($aa);
       const $area = document.querySelector(".area");
       console.log($area);
       $area.style.background = "grey";
