--- a/04_javascript(web)/01_DOM/04_DOM_modification/03_node_replace_remove.html
+++ b/04_javascript(web)/01_DOM/04_DOM_modification/03_node_replace_remove.html
@@ -30,7 +30,7 @@
 
     <h3>노드 삭제</h3>
     <pre>
-        Node.prototype.removeChild(child) 메소드는 childe 매개변수에 인수로 전달한 노드를 DOM에서 삭제한다.
+        Node.prototype.removeChild(child) 메소드는 child 매개변수에 인수로 전달한 노드를 DOM에서 삭제한다.
         인수로 전달한 노드는 removeChild 메소드를 호출한 노드의 자식이어야 한다.
     </pre>
 
