--- a/04_javascript(web)/01_DOM/03_node_property/02_text_node_content.html
+++ b/04_javascript(web)/01_DOM/03_node_property/02_text_node_content.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>02. 요소 노의 텍스트 조작</h1>
+    <h1>02. 요소 노드의 텍스트 조작</h1>
     <h3>nodeValue</h3>
     <pre>
         지금까지 살펴본 노드 탐색, 노드 정보 프로퍼티는 모두 읽기 전용 접근자 프로퍼티이다.
