--- a/13_react/02_component/06_iteration/03_list-add-remove.html
+++ b/13_react/02_component/06_iteration/03_list-add-remove.html
@@ -28,6 +28,7 @@
         const [nextId, setNextId] = useState(2);
 
         const handleChange = (e) => setInputValue(e.target.value);
+
         const handleAdd = () => {
           if (inputValue.trim() === "") return;
           const newName = { id: nextId, text: inputValue };
@@ -35,6 +36,17 @@
           setNames([...names, newName]);
           setNextId(nextId + 1);
           setInputValue("");
+        };
+
+        const handleRemove = (id) => {
+          /*
+            배열.filter(callback)
+            기존 배열에서 callback 함수를 각 요소마다 실행하고 true를 반환하는 요소들만으로 
+            다시 배열을 정의하여 반환하는 배열의 메소드
+            */
+          // id로 넘어온 값과 일치하지 않는 객체만 다시 배열로 반환
+          const updated = names.filter((name) => name.id !== id);
+          setNames(updated);
         };
 
         return (
@@ -48,7 +60,10 @@
             <button onClick={handleAdd}>추가</button>
             <ul>
               {names.map((name) => (
-                <li key={name.id}>{name.text}</li>
+                <li key={name.id} onDoubleClick={() => handleRemove(name.id)}>
+                  {name.text}
+                  <button onClick={() => handleRemove(name.id)}>삭제</button>
+                </li>
               ))}
             </ul>
           </>
